[package]
name = "rusted"
version = "0.1.0"
authors = ["mlsvrts <mlsvrts@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
chrono = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
